--- a/partials/navbar.hbs
+++ b/partials/navbar.hbs
@@ -1,7 +1,7 @@
 <header>
 
    {{! @website global variable used to display a logo and website name  }}
-   {{! check if a Website logo exists, if not, dispaly the website name }}
+   {{! check if a Website logo exists, if not, display the website name }}
    <a id="logo" href="{{@website.url}}">
       {{#if @website.logo}}
          <img src="{{@website.logo}}" alt="{{@website.name}}">
@@ -9,7 +9,7 @@
          {{@website.name}}
       {{/if}}
    </a>
-   {{! /check if a Website logo exists, if not, dispaly the website name }}
+   {{! /check if a Website logo exists, if not, display the website name }}
    {{! /@website global variable used to display a logo and website name  }}
 
    {{! check if a menu is assigned to the Main menu position }}
